# hiinakas

./: .env.local.example  .firebaserc  .gitignore  CLAUDE.md  eslint.config.js  firebase.json  firestore.rules  index.html  package-lock.json  package.json  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: train-royalty.yml  train.yml
docs/: 00_CLAUDE_CODE_PROMPT.md  01_RULES_AND_SCORING.md  02_ENGINE_EV_AND_BOT.md  03_ARCHITECTURE_AND_ROADMAP.md
functions/: .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.dev.json
functions/src/: index.ts  replayBridge.ts
scripts/: compute-bonus-ev.ts  deploy.sh  run_training.sh  selfplay-royalty.ts  selfplay.ts  train-manager.sh  train.py
src/: App.tsx  AuthGate.tsx  firebase.ts  main.tsx
src/coach/: useCoach.ts
src/components/: BoardView.tsx  BotSimulationOverlay.tsx  CandidateList.tsx  CardPicker.tsx  CardView.tsx  ChallengeHandsDetail.tsx  ChallengeHuubOverlay.tsx  CoachPanel.tsx  DecisionStepper.tsx  GamePlayView.tsx  HandView.tsx  LuckAnalysisSection.tsx  ReplaySession.tsx  SavedAnalysesList.tsx  ScoreView.tsx  SentChallengesList.tsx
src/engine/: bestBonus.ts  deck.ts  encode.ts  evaluate.ts  foulPruner.ts  heuristic.ts  index.ts  interface.ts  matchSimulator.ts  matchTypes.ts  mc.ts  mcts.ts  mlpInference.ts  nnPolicy.ts  placement.ts  royaltyMcts.ts  rules.ts  scoring.ts  simulate.ts  types.ts  wasmEngine.ts  wasmModel.ts
src/firestore/: huubBridge.ts  persistence.ts  sessionAnalysis.ts
src/game/: analyzerBridge.ts  botSimulator.ts  (+10 more)
wasm/: Cargo.toml
wasm/src/: lib.rs
(+24 files in other folders)
